# fukurow

./: .gitignore  Cargo.toml  LICENSE  README.md  demo.html  story.jsonnet
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
astoro/: README.md  package-lock.json  package.json
astoro/src/pages/: index.astro
crates/api/: Cargo.toml
crates/api/src/: handlers.rs  lib.rs  models.rs  routes.rs  server.rs
crates/api/tests/: api_tests.rs
crates/cli/: Cargo.toml
crates/cli/src/: commands.rs  interactive.rs  main.rs
crates/fukurow/: Cargo.toml
crates/fukurow-api/: Cargo.toml
crates/fukurow-api/crates/fukurow-operator/: Cargo.toml
crates/fukurow-api/src/: handlers.rs  lib.rs  models.rs  monitoring.rs  routes.rs  server.rs  siem_integration.rs
crates/fukurow-api/tests/: api_tests.rs
crates/fukurow-cli/: Cargo.toml
crates/fukurow-cli/src/: commands.rs  interactive.rs  lib.rs  main.rs
crates/fukurow-cli/tests/: cli_tests.rs
crates/fukurow-core/: Cargo.toml
crates/fukurow-core/benches/: core_benchmark.rs
crates/fukurow-core/src/: jsonld.rs  lib.rs  model.rs  query.rs  store.rs
crates/fukurow-core/tests/: graph_tests.rs
crates/fukurow-dl/: Cargo.toml
crates/fukurow-dl/benches/: owl_dl_benchmark.rs
crates/fukurow-dl/src/: lib.rs  loader.rs  model.rs  reasoner.rs  tableau.rs
crates/fukurow-domain-cyber/: Cargo.toml
crates/fukurow-domain-cyber/src/: anomaly_detection.rs  detectors.rs  lib.rs  patterns.rs  threat_intelligence.rs
crates/fukurow-domain-cyber/tests/: cyber_tests.rs
crates/fukurow-engine/: Cargo.toml
crates/fukurow-engine/src/: engine.rs  inference.rs  lib.rs  orchestration.rs  pipeline.rs  rules.rs  scaling.rs
crates/fukurow-engine/tests/: reasoner_tests.rs
crates/fukurow-lite/: Cargo.toml
crates/fukurow-lite/benches/: owl_lite_benchmark.rs
crates/fukurow-lite/src/: lib.rs  loader.rs  model.rs  reasoner.rs  tableau.rs
crates/fukurow-observability/: Cargo.toml
crates/fukurow-observability/src/: lib.rs
crates/fukurow-operator/: Cargo.toml
crates/fukurow-operator/src/: controller.rs  crds.rs  lib.rs  manager.rs  reconciler.rs
crates/fukurow-rdfs/: Cargo.toml
crates/fukurow-rdfs/benches/: rdfs_benchmark.rs
crates/fukurow-rdfs/src/: lib.rs
crates/fukurow-rdfs/tests/: rdfs_tests.rs
crates/fukurow-rules/: Cargo.toml
crates/fukurow-rules/src/: dsl.rs  lib.rs  traits.rs
crates/fukurow-shacl/: Cargo.toml
crates/fukurow-shacl/benches/: shacl_benchmark.rs
crates/fukurow-shacl/src/: lib.rs  loader.rs  report.rs  validator.rs
crates/fukurow-shacl/tests/: basic_shacl_tests.rs
crates/fukurow-siem/: Cargo.toml
crates/fukurow-siem/src/: chronicle.rs  common.rs  elk.rs  lib.rs  splunk.rs
crates/fukurow-sparql/: Cargo.toml
crates/fukurow-sparql/benches/: sparql_benchmark.rs
crates/fukurow-sparql/src/: algebra.rs  evaluator.rs  lib.rs  optimizer.rs  parser.rs
crates/fukurow-sparql/tests/: basic_tests.rs  w3c_compliance_tests.rs
crates/fukurow-store/: Cargo.toml
crates/fukurow-store/benches/: store_benchmark.rs
crates/fukurow-store/src/: lib.rs  persistence.rs  provenance.rs  store.rs  timeseriesdb.rs
crates/fukurow-store/src/adapter/: mod.rs  sqlite.rs  turso.rs
crates/fukurow-store/tests/: adapter_tests.rs  all_tests.rs  persistence_tests.rs  provenance_tests.rs  store_tests.rs
crates/fukurow-streaming/: Cargo.toml
crates/fukurow-streaming/src/: config.rs  consumer.rs  lib.rs  processor.rs  producer.rs  stream.rs
crates/fukurow-wasm/: Cargo.toml
crates/fukurow-wasm/src/: lib.rs  utils.rs
crates/fukurow/src/: lib.rs
crates/graph/: Cargo.toml
crates/graph/src/: jsonld.rs  model.rs  query.rs  store.rs
crates/graph/tests/: graph_tests.rs
crates/reasoner/src/: context.rs  engine.rs  rules.rs
crates/reasoner/tests/: reasoner_tests.rs
crates/rules-cyber/: Cargo.toml
crates/rules-cyber/src/: detectors.rs  threat_intelligence.rs
crates/rules-cyber/tests/: cyber_tests.rs
scripts/e2e/: README.md  test-k8s-operator.sh
tests/: Cargo.toml  integration.rs
