[workspace]
members = [
    "crates/fukurow-core",
    "crates/fukurow-store",
    "crates/fukurow-lite",
    "crates/fukurow-dl"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["gftdcojp"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/com-junkawasaki/fukurow"

[profile.release]
# LTO (Link Time Optimization) - 最適化されたバイナリ生成
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

# Package-specific optimizations are applied via Cargo features and conditional compilation

# Note: WebAssembly support is configured per crate in their respective Cargo.toml files

[workspace.dependencies]
# Core dependencies shared across crates (WebAssembly compatible)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
getrandom = { version = "0.3", features = ["js", "wasm_js"], default-features = false }
base64 = "0.22"

# Internal crate dependencies
fukurow-core = { path = "crates/fukurow-core", version = "0.1.0" }
fukurow-store = { path = "crates/fukurow-store", version = "0.1.0" }
fukurow-lite = { path = "crates/fukurow-lite", version = "0.1.0" }
fukurow-dl = { path = "crates/fukurow-dl", version = "0.1.0" }

# JSON-LD and RDF processing
json-ld = "0.16"
sophia = { version = "0.8", features = ["jsonld", "xml"] }

# WebAssembly core dependencies
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
js-sys = "0.3"
console_error_panic_hook = "0.1.6"

# Testing (WebAssembly compatible)
proptest = "1.0"

# SPARQL parsing and processing
logos = "0.14"
winnow = "0.6"
itertools = "0.13"
