[package]
name = "fukurow-integration-tests"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Integration tests for Fukurow components"

[lib]
name = "fukurow_integration_tests"
path = "integration.rs"

[dependencies]
fukurow-core = { path = "../crates/fukurow-core" }
fukurow-store = { path = "../crates/fukurow-store" }
fukurow-engine = { path = "../crates/fukurow-engine" }
tokio.workspace = true
chrono.workspace = true
