[package]
name = "reasoner-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
reasoner-core = { path = "../reasoner" }
reasoner-graph = { path = "../graph" }
rules-cyber = { path = "../rules-cyber" }
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
proptest.workspace = true
tokio.workspace = true
tower.workspace = true
