[package]
name = "reasoner-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
reasoner-core = { path = "../reasoner" }
reasoner-graph = { path = "../graph" }
rules-cyber = { path = "../rules-cyber" }
reasoner-api = { path = "../api" }
clap = { version = "4.0", features = ["derive"] }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
shell-words = "1.0"

[dev-dependencies]
proptest.workspace = true
tokio.workspace = true
