[package]
name = "fukurow-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "RESTful web API for Fukurow reasoning engine operations"
keywords = ["api", "rest", "web", "http", "reasoning"]
categories = ["web-programming", "api-bindings"]

[dependencies]
fukurow-core = { path = "../fukurow-core" }
fukurow-store = { path = "../fukurow-store" }
fukurow-engine = { path = "../fukurow-engine" }
fukurow-domain-cyber = { path = "../fukurow-domain-cyber" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true

[features]
default = []

[dev-dependencies]
proptest.workspace = true
