[package]
name = "fukurow-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "RESTful web API for Fukurow reasoning engine operations"
keywords = ["api", "rest", "web", "http", "reasoning"]
categories = ["web-programming", "api-bindings"]

[dependencies]
fukurow-core = "0.2.0"
fukurow-store = "0.2.0"
fukurow-engine = "0.2.0"
fukurow-domain-cyber = "0.2.0"
fukurow-observability = { path = "../fukurow-observability" }
fukurow-streaming = { path = "../fukurow-streaming" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
chrono.workspace = true
tokio.workspace = true
tracing.workspace = true
axum.workspace = true
tower.workspace = true
tower-http = { workspace = true, features = ["cors"] }
hyper.workspace = true
reqwest.workspace = true
uuid.workspace = true

[features]
default = []

[dev-dependencies]
proptest.workspace = true
