[package]
name = "fukurow-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
fukurow-core = { path = "../fukurow-core" }
fukurow-store = { path = "../fukurow-store" }
fukurow-engine = { path = "../fukurow-engine" }
fukurow-domain-cyber = { path = "../fukurow-domain-cyber" }
fukurow-api = { path = "../fukurow-api" }
clap = { version = "4.0", features = ["derive"] }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
shell-words = "1.0"
tempfile = "3.0"

[dev-dependencies]
proptest.workspace = true
tokio.workspace = true
