[package]
name = "fukurow-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line interface for Fukurow reasoning and knowledge graph operations"
keywords = ["cli", "command-line", "reasoning", "knowledge-graph", "tool"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
fukurow-core = "0.1.0"
fukurow-store = "0.1.0"
fukurow-engine = "0.1.0"
fukurow-domain-cyber = "0.1.0"
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true
