[package]
name = "fukurow-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core RDF/JSON-LD data models and processing for Fukurow reasoning engine"
keywords = ["rdf", "json-ld", "data-model", "semantic-web"]
categories = ["data-structures", "parsing"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
sophia.workspace = true
json-ld.workspace = true
iri-string = "0.7"
uuid = { version = "1.0", features = ["v4", "serde"], optional = true }
wasm-bindgen = { workspace = true, optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }
js-sys = { workspace = true, optional = true }

[features]
default = ["uuid", "chrono"]
wasm-bindgen = ["dep:wasm-bindgen", "dep:js-sys"]
no-uuid = []
no-chrono = []
wasm = ["wasm-bindgen", "no-uuid", "no-chrono"]

[dev-dependencies]
proptest.workspace = true
tokio.workspace = true
