[package]
name = "fukurow-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core RDF/JSON-LD data models and processing for Fukurow reasoning engine"
keywords = ["rdf", "json-ld", "data-model", "semantic-web"]
categories = ["data-structures", "parsing"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
sophia.workspace = true
json-ld.workspace = true
iri-string = "0.7"
lazy_static = "1.4"
smallvec = "1.13"
wasm-bindgen.workspace = true
js-sys.workspace = true

[dev-dependencies]
proptest.workspace = true
criterion = "0.7"

[[bench]]
name = "core_benchmark"
harness = false
