[package]
name = "fukurow-dl"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "OWL DL reasoning engine for Fukurow (complete tableau algorithm with individual reasoning)"
keywords = ["owl", "dl", "reasoning", "tableau", "description-logics"]
categories = ["algorithms", "data-structures"]

[dependencies]
fukurow-core = { path = "../fukurow-core" }
fukurow-store = { path = "../fukurow-store" }
fukurow-lite = { path = "../fukurow-lite" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
chrono.workspace = true
wasm-bindgen = { workspace = true, optional = true }

[features]
default = []
wasm-bindgen = ["dep:wasm-bindgen", "fukurow-core/wasm-bindgen", "fukurow-store/wasm-bindgen", "fukurow-lite/wasm-bindgen"]

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "owl_dl_benchmark"
harness = false
