[package]
name = "fukurow-dl"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "OWL DL reasoning engine for Fukurow (complete tableau algorithm with individual reasoning)"
keywords = ["owl", "dl", "reasoning", "tableau", "description-logics"]
categories = ["algorithms", "data-structures"]

[dependencies]
fukurow-core = "0.1.0"
fukurow-store = "0.1.0"
fukurow-lite = "0.1.0"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
chrono = { version = "0.4", features = ["serde"], optional = true }
wasm-bindgen = { workspace = true, optional = true }

[features]
default = []
chrono = ["dep:chrono"]
# wasm-bindgen = ["dep:wasm-bindgen", "fukurow-core/wasm-bindgen", "fukurow-store/wasm-bindgen", "fukurow-lite/wasm-bindgen"]
# wasm feature temporarily disabled for publication
# wasm = ["wasm-bindgen", "fukurow-core/wasm", "fukurow-store/wasm", "fukurow-lite/wasm"]

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "owl_dl_benchmark"
harness = false
