[package]
name = "fukurow-dl"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "OWL DL reasoning engine for Fukurow (complete tableau algorithm with individual reasoning)"
keywords = ["owl", "dl", "reasoning", "tableau", "description-logics"]
categories = ["algorithms", "data-structures"]

[dependencies]
fukurow-core = "0.2.0"
fukurow-store = "0.2.0"
fukurow-lite = "0.2.0"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
wasm-bindgen.workspace = true

[dev-dependencies]
criterion = "0.7"

[[bench]]
name = "owl_dl_benchmark"
harness = false
