[package]
name = "fukurow-domain-cyber"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Cyber security domain rules and threat intelligence for Fukurow reasoning engine"
keywords = ["cyber-security", "threat-intelligence", "rules", "detection", "siem"]
categories = ["algorithms", "api-bindings"]

[dependencies]
fukurow-rules = { path = "../fukurow-rules" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
regex = "1.10"

[dev-dependencies]
proptest.workspace = true
