[package]
name = "fukurow-domain-cyber"
version = "0.2.0"
edition = "2021"
authors = ["gftdcojp"]
license = "Apache-2.0"
repository = "https://github.com/com-junkawasaki/fukurow"
description = "Cyber security domain rules and threat intelligence for Fukurow reasoning engine"
keywords = ["cyber-security", "threat-intelligence", "rules", "detection", "siem"]
categories = ["algorithms", "api-bindings"]

[dependencies]
fukurow-core = { path = "../fukurow-core" }
fukurow-store = { path = "../fukurow-store" }
fukurow-rules = { path = "../fukurow-rules" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
regex = "1.10"
async-trait = "0.1"

[dev-dependencies]
proptest = "1.0"
