[package]
name = "fukurow-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Reasoning engine orchestration that integrates reasoners and rules for Fukurow"
keywords = ["reasoning", "inference", "engine", "orchestration", "knowledge-graph"]
categories = ["algorithms", "concurrency"]

[dependencies]
fukurow-core = { path = "../fukurow-core" }
fukurow-store = { path = "../fukurow-store" }
fukurow-rules = { path = "../fukurow-rules" }
fukurow-rdfs = { path = "../fukurow-rdfs" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
chrono.workspace = true
tokio.workspace = true
tracing.workspace = true
futures.workspace = true
uuid.workspace = true

[dev-dependencies]
proptest.workspace = true
