[package]
name = "fukurow-lite"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "OWL Lite reasoning engine for Fukurow (tableau algorithm implementation)"
keywords = ["owl", "reasoning", "tableau", "ontology", "semantic-web"]
categories = ["algorithms", "data-structures"]

[dependencies]
fukurow-core = { path = "../fukurow-core" }
fukurow-store = { path = "../fukurow-store" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
chrono = { version = "0.4", features = ["serde"], optional = true }
wasm-bindgen = { workspace = true, optional = true }

[features]
default = ["chrono"]
wasm-bindgen = ["dep:wasm-bindgen", "fukurow-core/wasm-bindgen", "fukurow-store/wasm-bindgen"]
wasm = ["wasm-bindgen", "fukurow-core/wasm", "fukurow-store/wasm"]

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "owl_lite_benchmark"
harness = false
