[package]
name = "fukurow-operator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Kubernetes operator for Fukurow reasoning engine deployment and management"
keywords = ["kubernetes", "operator", "crd", "deployment", "scaling"]
categories = ["api-bindings", "cloud"]

[dependencies]
kube = { version = "0.87", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.21", features = ["v1_28"] }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
futures = "0.3"
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
async-trait = "0.1"
schemars = "0.8"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
proptest.workspace = true
tokio.workspace = true
