[package]
name = "fukurow-operator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Kubernetes operator for Fukurow reasoning engine deployment and management"
keywords = ["kubernetes", "operator", "crd", "deployment", "scaling"]
categories = ["api-bindings", "cloud"]

[dependencies]
kube = { version = "0.87", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.21", features = ["v1_28"] }
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
home = "0.5.9"
thiserror.workspace = true
anyhow.workspace = true
schemars = "0.8"

[dev-dependencies]
proptest.workspace = true
