[package]
name = "fukurow-rules"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Rule traits and constraint validation (SHACL equivalent) for Fukurow reasoning"
keywords = ["rules", "validation", "shacl", "reasoning", "constraints"]
categories = ["algorithms", "data-structures"]

[dependencies]
fukurow-core = { path = "../fukurow-core" }
fukurow-store = { path = "../fukurow-store" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true
