[package]
name = "fukurow-siem"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "SIEM integration for Fukurow (Splunk, ELK, Chronicle)"
keywords = ["siem", "splunk", "elk", "chronicle", "security", "integration"]
categories = ["api-bindings", "asynchronous"]

[dependencies]
fukurow-core = "0.1.0"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tokio.workspace = true
reqwest.workspace = true
chrono.workspace = true
uuid.workspace = true
base64.workspace = true
async-trait.workspace = true

[dev-dependencies]
tokio.workspace = true
mockito = "1.6"
