[package]
name = "fukurow-siem"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "SIEM integration for Fukurow (Splunk, ELK, Chronicle)"
keywords = ["siem", "splunk", "elk", "security", "integration"]

[dependencies]
fukurow-core = "0.1.0"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
reqwest.workspace = true
uuid.workspace = true
base64.workspace = true

[dev-dependencies]
mockito = "1.6"
