[package]
name = "fukurow-store"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "RDF triple store with provenance tracking and audit trails for Fukurow"
keywords = ["rdf", "triple-store", "provenance", "audit", "knowledge-graph"]
categories = ["database", "data-structures"]

[dependencies]
fukurow-core = { path = "../fukurow-core" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tokio = { workspace = true, optional = true }
uuid = { version = "1.0", features = ["v4", "serde"], optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }
wasm-bindgen = { workspace = true, optional = true }
async-trait = { version = "0.1", optional = true }
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "macros"], optional = true }
libsql = { version = "0.3", optional = true }
tempfile = { version = "3.0", optional = true }


[features]
default = ["tokio", "uuid", "chrono", "async-trait", "sqlx", "tempfile"]
wasm-bindgen = ["dep:wasm-bindgen", "fukurow-core/wasm-bindgen"]
"turso" = ["dep:libsql"]
wasm = ["wasm-bindgen", "fukurow-core/wasm"]

[dev-dependencies]
proptest.workspace = true
tokio.workspace = true
