[package]
name = "fukurow-store"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "RDF triple store with provenance tracking and audit trails for Fukurow"
keywords = ["rdf", "triple-store", "provenance", "audit", "knowledge-graph"]
categories = ["database", "data-structures"]

[dependencies]
fukurow-core = "0.2.0"
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
wasm-bindgen.workspace = true

[dev-dependencies]
proptest.workspace = true
