[package]
name = "fukurow-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "WebAssembly bindings for Fukurow reasoning engine (browser integration)"
keywords = ["wasm", "webassembly", "browser", "reasoning", "owl"]
categories = ["wasm", "api-bindings"]

[lib]
crate-type = ["cdylib"]

[dependencies]
# Core RDF processing (WebAssembly compatible)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
sophia = { version = "0.8", features = ["jsonld", "xml"] }
json-ld = "0.16"
iri-string = "0.7"
lazy_static = "1.4"
smallvec = "1.13"
wasm-bindgen = { workspace = true, features = ["serde-serialize"] }
web-sys = { workspace = true, features = [
  "console",
  "Window",
  "Document",
  "Element",
  "HtmlElement",
  "HtmlCanvasElement",
  "Node",
  "CanvasRenderingContext2d",
  "ImageData",
] }
js-sys.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
console_error_panic_hook.workspace = true
