[package]
name = "fukurow-wasm"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/com-junkawasaki/fukurow"
description = "WebAssembly bindings for Fukurow reasoning engine (browser integration)"
keywords = ["wasm", "webassembly", "browser", "reasoning", "owl"]
categories = ["wasm", "api-bindings"]

[lib]
crate-type = ["cdylib"]

[dependencies]
# Core RDF processing (WebAssembly compatible)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
sophia = { version = "0.8", features = ["jsonld", "xml"] }
json-ld = "0.16"
iri-string = "0.7"
lazy_static = "1.4"
smallvec = "1.13"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
web-sys = { version = "0.3", features = [
  "console",
  "Window",
  "Document",
  "Element",
  "HtmlElement",
  "HtmlCanvasElement",
  "Node",
  "CanvasRenderingContext2d",
  "ImageData",
] }
js-sys = "0.3"
console_error_panic_hook = "0.1.6"
